--- a/fluentd-daemonset.yaml
+++ b/fluentd-daemonset.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: fluentd
-        image: fluentd-k8s
+        image: quay.io/fluent/fluentd-kubernetes-daemonset
         resources:
           limits:
             memory: 200Mi
