docker: keep one fluent.conf file
Signed-off-by: Eduardo Silva <eduardo@treasure-data.com>

--- a/docker-image/fluent.conf
+++ b/docker-image/fluent.conf
@@ -1,6 +1,6 @@
 # This is a dummy file to avoid break build of parent container, the real
 # configuration files are located at:
 #
-# conf/fluentd.conf
+# conf/fluent.conf
 # conf/kubernetes.conf
 
