docker image: fluent.conf: use new environment vars for host and port
Signed-off-by: Eduardo Silva <eduardo@treasure-data.com>

--- a/docker-image/conf/fluent.conf
+++ b/docker-image/conf/fluent.conf
@@ -4,8 +4,8 @@
    type elasticsearch
    log_level info
    include_tag_key true
-   host elasticsearch-logging
-   port 9200
+   host "#{ENV['FLUENT_ELASTICSEARCH_HOST']}"
+   port "#{ENV['FLUENT_ELASTICSEARCH_PORT']}"
    logstash_format true
    buffer_chunk_limit 2M
    buffer_queue_limit 32
