fluentd-elasticsearch daemonset: set new environment variables
Signed-off-by: Eduardo Silva <eduardo@treasure-data.com>

--- a/fluentd-daemonset.yaml
+++ b/fluentd-daemonset.yaml
@@ -18,6 +18,11 @@ spec:
       containers:
       - name: fluentd
         image: quay.io/fluent/fluentd-kubernetes-daemonset
+        env:
+          - name:  FLUENT_ELASTICSEARCH_HOST
+            value: elasticsearch-host
+          - name:  FLUENT_ELASTICSEARCH_PORT
+            value: 9200
         resources:
           limits:
             memory: 200Mi
