--- a/fluentd-daemonset.yaml
+++ b/fluentd-daemonset.yaml
@@ -20,9 +20,9 @@ spec:
         image: quay.io/fluent/fluentd-kubernetes-daemonset
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
-            value: elasticsearch-host
+            value: "elasticsearch-host"
           - name:  FLUENT_ELASTICSEARCH_PORT
-            value: 9200
+            value: "9200"
         resources:
           limits:
             memory: 200Mi
