schema: rename elasticsearch yaml
Signed-off-by: Eduardo Silva <eduardo@treasure-data.com>

--- a/fluentd-daemonset-elasticsearch.yaml
+++ b/fluentd-daemonset-elasticsearch.yaml
@@ -20,7 +20,7 @@ spec:
         image: quay.io/fluent/fluentd-kubernetes-daemonset
         env:
           - name:  FLUENT_ELASTICSEARCH_HOST
-            value: "elasticsearch-host"
+            value: "elasticsearch-logging"
           - name:  FLUENT_ELASTICSEARCH_PORT
             value: "9200"
         resources:
