replace elasticsearch with logentries

--- a/docker-image/conf/fluent.conf
+++ b/docker-image/conf/fluent.conf
@@ -1,16 +1,16 @@
 @include kubernetes.conf
 
+# copy to stdout for debug
 <match **>
-   type elasticsearch
-   log_level info
-   include_tag_key true
-   host "#{ENV['FLUENT_ELASTICSEARCH_HOST']}"
-   port "#{ENV['FLUENT_ELASTICSEARCH_PORT']}"
-   logstash_format true
-   buffer_chunk_limit 2M
-   buffer_queue_limit 32
-   flush_interval 5s
-   max_retry_wait 30
-   disable_retry_limit
-   num_threads 8
+  @type copy
+  <store>
+    @type stdout
+  </store>
+  <store>
+    type logentries
+    use_json true
+    tag_access_log stdout
+    tag_error_log stderr
+    config_path /etc/logentries/tokens.yaml
+  </store>
 </match>
