--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -1,5 +1,4 @@
 FROM fluent/fluentd:v0.12-onbuild
-MAINTAINER Eduardo Silva <eduardo@treasure-data.com>
 USER root
 WORKDIR /home/fluent
 ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
@@ -10,7 +9,6 @@ RUN apk --no-cache --update add \
     echo 'gem: --no-document' >> /etc/gemrc && \
     gem install fluent-plugin-secure-forward && \
     gem install fluent-plugin-record-reformer && \
-    gem install fluent-plugin-elasticsearch && \
     gem install fluent-plugin-kubernetes_metadata_filter && \
     apk del build-base ruby-dev && \
     rm -rf /tmp/* /var/tmp/* /var/cache/apk/* /usr/lib/ruby/gems/*/cache/*.gem
@@ -22,6 +20,10 @@ COPY ./conf/kubernetes.conf /fluentd/etc/
 # Environment variables
 ENV FLUENTD_OPT=""
 ENV FLUENTD_CONF="fluent.conf"
+
+# jemalloc is memory optimization only available for td-agent
+# td-agent is provided and QA'ed by treasuredata as rpm/deb/.. package
+# -> td-agent (stable) vs fluentd (edge)
 #ENV LD_PRELOAD="/usr/lib/libjemalloc.so.2"
 
 # Run Fluentd
