--- a/docker-image/conf/kubernetes.conf
+++ b/docker-image/conf/kubernetes.conf
@@ -5,7 +5,7 @@
 <source>
   type tail
   path /var/log/containers/*.log
-  pos_file /var/log/es-containers.log.pos
+  pos_file /var/log/le-containers.log.pos
   time_format %Y-%m-%dT%H:%M:%S.%NZ
   tag kubernetes.*
   format json
@@ -17,7 +17,7 @@
   format /^(?<time>[^ ]* [^ ,]*)[^\[]*\[[^\]]*\]\[(?<severity>[^ \]]*) *\] (?<message>.*)$/
   time_format %Y-%m-%d %H:%M:%S
   path /var/log/salt/minion
-  pos_file /var/log/es-salt.pos
+  pos_file /var/log/le-salt.pos
   tag salt
 </source>
 
@@ -25,7 +25,7 @@
   type tail
   format syslog
   path /var/log/startupscript.log
-  pos_file /var/log/es-startupscript.log.pos
+  pos_file /var/log/le-startupscript.log.pos
   tag startupscript
 </source>
 
@@ -33,7 +33,7 @@
   type tail
   format /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
   path /var/log/docker.log
-  pos_file /var/log/es-docker.log.pos
+  pos_file /var/log/le-docker.log.pos
   tag docker
 </source>
 
@@ -41,7 +41,7 @@
   type tail
   format none
   path /var/log/etcd.log
-  pos_file /var/log/es-etcd.log.pos
+  pos_file /var/log/le-etcd.log.pos
   tag etcd
 </source>
 
@@ -50,7 +50,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/kubelet.log
-  pos_file /var/log/es-kubelet.log.pos
+  pos_file /var/log/le-kubelet.log.pos
   tag kubelet
 </source>
 
@@ -59,7 +59,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/kube-proxy.log
-  pos_file /var/log/es-kube-proxy.log.pos
+  pos_file /var/log/le-kube-proxy.log.pos
   tag kube-proxy
 </source>
 
@@ -68,7 +68,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/kube-apiserver.log
-  pos_file /var/log/es-kube-apiserver.log.pos
+  pos_file /var/log/le-kube-apiserver.log.pos
   tag kube-apiserver
 </source>
 
@@ -77,7 +77,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/kube-controller-manager.log
-  pos_file /var/log/es-kube-controller-manager.log.pos
+  pos_file /var/log/le-kube-controller-manager.log.pos
   tag kube-controller-manager
 </source>
 
@@ -86,7 +86,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/kube-scheduler.log
-  pos_file /var/log/es-kube-scheduler.log.pos
+  pos_file /var/log/le-kube-scheduler.log.pos
   tag kube-scheduler
 </source>
 
@@ -95,7 +95,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/rescheduler.log
-  pos_file /var/log/es-rescheduler.log.pos
+  pos_file /var/log/le-rescheduler.log.pos
   tag rescheduler
 </source>
 
@@ -104,7 +104,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/glbc.log
-  pos_file /var/log/es-glbc.log.pos
+  pos_file /var/log/le-glbc.log.pos
   tag glbc
 </source>
 
@@ -113,7 +113,7 @@
   format kubernetes
   multiline_flush_interval 5s
   path /var/log/cluster-autoscaler.log
-  pos_file /var/log/es-cluster-autoscaler.log.pos
+  pos_file /var/log/le-cluster-autoscaler.log.pos
   tag cluster-autoscaler
 </source>
 
