--- a/docker-image/v0.12/logentries/conf/fluent.conf
+++ b/docker-image/v0.12/logentries/conf/fluent.conf
@@ -6,7 +6,9 @@
 <match **>
    type logentries
    use_json true
+   app_name ${record['kubernetes']['namespace_name']}
    tag_access_log stdout
    tag_error_log stderr
+   token_name ${tag == @tag_access_log ? 'access': tag == @tag_error_log ? 'error': 'app'}
    config_path /etc/logentries/tokens.yaml
 </match>
