--- a/docker-image/v0.12/logzio/conf/fluent.conf
+++ b/docker-image/v0.12/logzio/conf/fluent.conf
@@ -5,11 +5,11 @@
 
 <match **>
    type logzio_buffered
-   endpoint_url https://listener.logz.io:8071?token=#{ENV['LOGZIO_TOKEN']}&type=json
+   endpoint_url https://listener.logz.io:8071?token=#{ENV['LOGZIO_TOKEN']}&type=#{ENV['LOGZIO_TYPE']}
    output_include_time true
    output_include_tags true
    buffer_type    file
-   buffer_path    /path/to/buffer/file
+   buffer_path    /var/log/logzio-buffer
    flush_interval 10s
    buffer_chunk_limit 1m   # Logz.io has bulk limit of 10M. We recommend set this to 1M, to avoid oversized bulks
 </match>
