Add source cluster field from env, fix uri

--- a/docker-image/v0.12/logzio/conf/fluent.conf
+++ b/docker-image/v0.12/logzio/conf/fluent.conf
@@ -3,9 +3,18 @@
 
 @include kubernetes.conf
 
-<match **>
+
+<match kubernetes.**>
+  type record_reformer
+  <record>
+    cluster "#{ENV['CLUSTER']}"
+  </record>
+  tag reformed.*
+</match>
+
+<match reformed.**>
    type logzio_buffered
-   endpoint_url https://listener.logz.io:8071?token=#{ENV['LOGZIO_TOKEN']}&type=#{ENV['LOGZIO_TYPE']}
+   endpoint_url "https://listener.logz.io:8071?token=#{ENV['LOGZIO_TOKEN']}&type=#{ENV['LOGZIO_TYPE']}"
    output_include_time true
    output_include_tags true
    buffer_type    file
