Add FLUENT_ELASTICSEARCH_SCHEME environment variable

--- a/docker-image/v0.12/elasticsearch/conf/fluent.conf
+++ b/docker-image/v0.12/elasticsearch/conf/fluent.conf
@@ -9,6 +9,7 @@
    include_tag_key true
    host "#{ENV['FLUENT_ELASTICSEARCH_HOST']}"
    port "#{ENV['FLUENT_ELASTICSEARCH_PORT']}"
+   scheme "#{ENV['FLUENT_ELASTICSEARCH_SCHEME'] || 'http'}"
    logstash_format true
    buffer_chunk_limit 2M
    buffer_queue_limit 32
