Set the Papertrail host and port in the daemonset

--- a/docker-image/v0.12/alpine-papertrail/conf/fluent.conf
+++ b/docker-image/v0.12/alpine-papertrail/conf/fluent.conf
@@ -6,7 +6,7 @@
 
 <match **>
   type remote_syslog
-  host ${ENV["PAPERTRAIL_REMOTE_SYSLOG_HOST_URI"]}
-  port ${ENV["PAPERTRAIL_REMOTE_SYSLOG_HOST_PORT"]}
+  host ${ENV["FLUENT_PAPERTRAIL_HOST"]}
+  port ${ENV["FLUENT_PAPERTRAIL_PORT"]}
   flush_interval 5s
 </match>
