Add hostname env variable for customising the hostname sent to papertrail

--- a/fluentd-daemonset-papertrail.yaml
+++ b/fluentd-daemonset-papertrail.yaml
@@ -22,10 +22,12 @@ spec:
       - name: fluentd
         image: fluent/fluentd-kubernetes-daemonset:papertrail
         env:
-          - name:  FLUENT_PAPERTRAIL_HOST
+          - name: FLUENT_PAPERTRAIL_HOST
             value: "logsX.papertrailapp.com"
-          - name:  FLUENT_PAPERTRAIL_PORT
-            value: "XXXXX" 
+          - name: FLUENT_PAPERTRAIL_PORT
+            value: "XXXXX"
+          - name: FLUENT_HOSTNAME
+            value: "MYCLUSTER"
         resources:
           limits:
             memory: 200Mi
