--- a/docker-image/v0.12/debian-papertrail/conf/fluent.conf
+++ b/docker-image/v0.12/debian-papertrail/conf/fluent.conf
@@ -7,7 +7,7 @@
 
 <match **>
   type remote_syslog
-  host ${ENV["FLUENT_PAPERTRAIL_HOST"]}
-  port ${ENV["FLUENT_PAPERTRAIL_PORT"]}
-  flush_interval 5s
+  host "#{ENV['FLUENT_PAPERTRAIL_HOST']}"
+  port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
+  hostname "#{ENV['FLUENT_HOSTNAME']}"
 </match>
