Add support for Papertrail

--- a/docker-image/v0.12/alpine-papertrail/Dockerfile
+++ b/docker-image/v0.12/alpine-papertrail/Dockerfile
@@ -12,10 +12,11 @@ RUN set -ex \
         build-base \
         ruby-dev \
         libffi-dev \
+        git \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
-    && gem install fluent-plugin-remote_syslog -v 0.3.3 \
+    && gem install fluent-plugin-papertrail -v 0.1 \
     && gem install fluent-plugin-kubernetes_metadata_filter \
     && apk del .build-deps \
     && gem sources --clear-all \
