--- a/docker-image/v0.12/alpine-papertrail/conf/fluent.conf
+++ b/docker-image/v0.12/alpine-papertrail/conf/fluent.conf
@@ -4,9 +4,11 @@
 
 @include kubernetes.conf
 
+
 <match **>
-  type remote_syslog
-  host "#{ENV['FLUENT_PAPERTRAIL_HOST']}"
-  port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
-  hostname "#{ENV['FLUENT_HOSTNAME']}"
+  type papertrail
+
+  papertrail_host "#{ENV['FLUENT_PAPERTRAIL_HOST']}"
+  papertrail_port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
+
 </match>
