--- a/docker-image/v0.12/debian-papertrail/Dockerfile
+++ b/docker-image/v0.12/debian-papertrail/Dockerfile
@@ -8,7 +8,7 @@ USER root
 WORKDIR /home/fluent
 ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 
-RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
+RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev git" \
      && apt-get update \
      && apt-get install \
      -y --no-install-recommends \
@@ -16,7 +16,7 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
-    && gem install fluent-plugin-remote_syslog -v 0.3.3 \
+    && gem install fluent-plugin-papertrail -v 0.1 \
     && gem install fluent-plugin-kubernetes_metadata_filter \
     && gem install ffi \
     && gem install fluent-plugin-systemd -v 0.0.8 \
