Remove PaperTrail specific config from other integrations

--- a/docker-image/v0.12/debian-papertrail/conf/fluent.conf
+++ b/docker-image/v0.12/debian-papertrail/conf/fluent.conf
@@ -6,6 +6,14 @@
 @include kubernetes.conf
 
 
+## Capture audit logs
+#<match kube-apiserver-audit>
+#  type papertrail
+#
+#  papertrail_host "#{ENV['FLUENT_PAPERTRAIL_AUDIT_HOST']}"
+#  papertrail_port "#{ENV['FLUENT_PAPERTRAIL_AUDIT_PORT']}"
+#</match>
+
 <match **>
   type papertrail
 
@@ -13,3 +21,4 @@
   papertrail_port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
 
 </match>
+
