--- a/docker-image/v0.12/alpine-papertrail/conf/fluent.conf
+++ b/docker-image/v0.12/alpine-papertrail/conf/fluent.conf
@@ -5,6 +5,14 @@
 @include kubernetes.conf
 
 
+## Capture audit logs
+#<match kube-apiserver-audit>
+#  type papertrail
+#
+#  papertrail_host "#{ENV['FLUENT_PAPERTRAIL_AUDIT_HOST']}"
+#  papertrail_port "#{ENV['FLUENT_PAPERTRAIL_AUDIT_PORT']}"
+#</match>
+
 <match **>
   type papertrail
 
@@ -12,3 +20,4 @@
   papertrail_port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
 
 </match>
+
