--- a/docker-image/v0.12/debian-elasticsearch/Dockerfile
+++ b/docker-image/v0.12/debian-elasticsearch/Dockerfile
@@ -10,7 +10,7 @@ ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 
 RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
      && apt-get update \
-     && apt-get upgrade \
+     && apt-get upgrade -y \
      && apt-get install \
      -y --no-install-recommends \
      $buildDeps \
