--- a/docker-image/v0.12/alpine-syslog/conf/fluent.conf
+++ b/docker-image/v0.12/alpine-syslog/conf/fluent.conf
@@ -5,19 +5,12 @@
 @include kubernetes.conf
 
 <match **>
-  @type remote_syslog
+  @type kubernetes_remote_syslog
   host "#{ENV['SYSLOG_HOST']}"
   port "#{ENV['SYSLOG_PORT']}"
   severity debug
-  program fluentd
-  hostname ${tag[1]}
-  packet_size 4096
-
-  <buffer tag>
-  </buffer>
-
-  <format>
-    @type ltsv
-    message_key msg
-  </format>
+  tag fluentd
+  protocol tcp
+  packet_size 65535
+  output_data_type ltsv
 </match>
