Using only docker plugin image

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,7 +19,7 @@ pipeline:
       event: pull_request
 
   publish:
-    <<: *docker_build
+    image: plugins/docker
     <<: *proxy_environment
     secrets:
       - docker_username
