Setting drone config back and using absolute paths in Dockerfile

--- a/.drone.yml
+++ b/.drone.yml
@@ -19,15 +19,12 @@ pipeline:
       event: pull_request
 
   publish:
-    image: plugins/docker
+    <<: *docker_build
     <<: *proxy_environment
+    auto_tag: true
     secrets:
       - docker_username
       - docker_password
-    commands:
-      - make image DOCKERFILE=v0.12/alpine-kafka
-      - docker tag fluent/fluentd-kubernetes:stable-kafka docker-dev.core/rcsops.com/${DRONE_REPO_NAME}/fluent/fluentd-kubernetes:stable-kafka
-      - docker push docker-dev.core/rcsops.com/${DRONE_REPO_NAME}/fluent/fluentd-kubernetes:stable-kafka
     when:
       event:
         - tag
