--- a/docker-image/v0.12/alpine-elasticsearch/Dockerfile
+++ b/docker-image/v0.12/alpine-elasticsearch/Dockerfile
@@ -16,6 +16,8 @@ RUN set -ex \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-rewrite-tag-filter -v 1.6.0 \
+    && gem install fluent-plugin-prometheus \
     && gem install fluent-plugin-elasticsearch \
     && gem install fluent-plugin-kubernetes_metadata_filter \
     && apk del .build-deps \
