Pin gem version numbers

--- a/docker-image/v0.12/alpine-cloudwatch/Dockerfile
+++ b/docker-image/v0.12/alpine-cloudwatch/Dockerfile
@@ -14,9 +14,10 @@ RUN set -ex \
         ruby-dev \
         libffi-dev \
     && echo 'gem: --no-document' >> /etc/gemrc \
-    && gem install fluent-plugin-secure-forward \
-    && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-secure-forward -v 0.4.5 \
+    && gem install fluent-plugin-record-reformer -v 0.9.0 \
     && gem install fluent-plugin-rewrite-tag-filter -v 1.6.0 \
+    && gem install fluent-plugin-prometheus -v 0.3.0 \
     && gem install aws-sdk-core -v 2.10.50 \
     && gem install fluent-plugin-cloudwatch-logs -v 0.4.0 \
     && gem install fluent-plugin-kubernetes_metadata_filter \
