--- a/docker-image/v0.12/debian-stackdriver/Dockerfile
+++ b/docker-image/v0.12/debian-stackdriver/Dockerfile
@@ -15,13 +15,14 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
      -y --no-install-recommends \
      $buildDeps \
     && echo 'gem: --no-document' >> /etc/gemrc \
-    && gem install fluent-plugin-secure-forward \
-    && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-secure-forward -v 0.4.5 \
+    && gem install fluent-plugin-record-reformer -v 0.9.0 \
     && gem install fluent-plugin-rewrite-tag-filter -v 1.6.0 \
+    && gem install fluent-plugin-prometheus -v 0.3.0 \
     && gem install fluent-plugin-google-cloud \
     && gem install fluent-plugin-kubernetes_metadata_filter \
     && gem install ffi \
-    && gem install fluent-plugin-systemd -v 0.0.8 \
+    && gem install fluent-plugin-systemd -v 0.0.9 \
     && SUDO_FORCE_REMOVE=yes \
     apt-get purge -y --auto-remove \
                   -o APT::AutoRemove::RecommendsImportant=false \
