--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,8 @@ docker_build: &docker_build
   image: plugins/docker
   registry: docker-dev.core.rcsops.com
   repo: docker-dev.core.rcsops.com/${DRONE_REPO_NAME}
-  dockerfile: docker-image/v0.12/alpine-kafka/Dockerfile
+  context: docker-image/v0.12/debian-kafka
+  dockerfile: docker-image/v0.12/debian-kafka/Dockerfile
 
 proxy_environment: &proxy_environment
   environment:
