fixed version of logzio plugin to prevent incompabilities

--- a/docker-image/v0.12/debian-logzio/Dockerfile
+++ b/docker-image/v0.12/debian-logzio/Dockerfile
@@ -17,7 +17,7 @@ RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
-    && gem install fluent-plugin-logzio \
+    && gem install fluent-plugin-logzio -v 0.0.14 \
     && gem install fluent-plugin-kubernetes_metadata_filter \
     && gem install ffi \
     && gem install fluent-plugin-systemd -v 0.0.8 \
