--- a/fluentd-daemonset-elasticsearch.yaml
+++ b/fluentd-daemonset-elasticsearch.yaml
@@ -28,9 +28,9 @@ spec:
             value: "9200"
           - name: FLUENT_ELASTICSEARCH_SCHEME
             value: "http"
-          # Option to configure Secure Forward Plugin with self signed certs
+          # Option to configure elasticsearch plugin with self signed certs
           # ================================================================
-          - name: FLUENT_ELASTICSEARCH_SECURE
+          - name: FLUENT_ELASTICSEARCH_SSL_VERIFY
             value: "true"
           # X-Pack Authentication
           # =====================
