--- a/docker-image/v0.12/debian-graylog/Dockerfile
+++ b/docker-image/v0.12/debian-graylog/Dockerfile
@@ -10,12 +10,14 @@ ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 
 RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev git build-essential patch zlib1g-dev liblzma-dev" \
      && apt-get update \
+     && apt-get upgrade -y \
      && apt-get install \
      -y --no-install-recommends \
      $buildDeps \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-detect-exceptions -v 0.0.9 \
     && gem install jeweler \
     && git clone https://github.com/graylog-labs/gelf-rb.git \
     && cd gelf-rb \
@@ -39,6 +41,7 @@ COPY ./conf/kubernetes.conf /fluentd/etc/
 
 # Copy plugins
 COPY plugins /fluentd/plugins/
+COPY entrypoint.sh /fluentd/entrypoint.sh
 
 # Environment variables
 ENV FLUENTD_OPT=""
@@ -50,4 +53,4 @@ ENV FLUENTD_CONF="fluent.conf"
 #ENV LD_PRELOAD="/usr/lib/libjemalloc.so.2"
 
 # Run Fluentd
-CMD exec fluentd -c /fluentd/etc/$FLUENTD_CONF -p /fluentd/plugins $FLUENTD_OPT
+CMD ["/fluentd/entrypoint.sh"]
