sync: regenerate templates
Signed-off-by: Eduardo Silva <eduardo@treasure-data.com>

--- a/docker-image/v0.12/debian-syslog/conf/fluent.conf
+++ b/docker-image/v0.12/debian-syslog/conf/fluent.conf
@@ -6,18 +6,13 @@
 @include kubernetes.conf
 
 <match **>
-  @type remote_syslog
+  @type kubernetes_remote_syslog
   host "#{ENV['SYSLOG_HOST']}"
   port "#{ENV['SYSLOG_PORT']}"
   severity debug
-  program fluentd
-  hostname ${tag[1]}
-
-  <buffer tag>
-  </buffer>
-
-  <format>
-    @type single_value
-    message_key msg
-  </format>
+  tag fluentd
+  protocol tcp
+  packet_size 65535
+  output_data_type ltsv
 </match>
+
