--- a/docker-image/v0.12/alpine-syslog/conf/fluent.conf
+++ b/docker-image/v0.12/alpine-syslog/conf/fluent.conf
@@ -9,7 +9,9 @@
   host "#{ENV['SYSLOG_HOST']}"
   port "#{ENV['SYSLOG_PORT']}"
   severity debug
+  tag fluentd
   protocol tcp
   packet_size 65535
-  output_data_type single_value
+  output_data_type ltsv
 </match>
+
