Making some changes to sync up upstream and rubicon versions

--- a/docker-image/v0.12/alpine-kafka/Dockerfile
+++ b/docker-image/v0.12/alpine-kafka/Dockerfile
@@ -25,8 +25,8 @@ RUN set -ex \
     && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
 
 # Copy configuration files
-COPY docker-image/v0.12/alpine-kafka/conf/fluent.conf /fluentd/etc/
-COPY docker-image/v0.12/alpine-kafka/conf/kubernetes.conf /fluentd/etc/
+COPY ./conf/fluent.conf /fluentd/etc/
+COPY ./conf/kubernetes.conf /fluentd/etc/
 
 # Copy plugins
 COPY plugins /fluentd/plugins/
@@ -42,4 +42,4 @@ ENV FLUENTD_CONF="fluent.conf"
 #ENV LD_PRELOAD="/usr/lib/libjemalloc.so.2"
 
 # Run Fluentd
-CMD ["/fluentd/entrypoint.sh"]
+CMD exec fluentd -c /fluentd/etc/$FLUENTD_CONF -p /fluentd/plugins $FLUENTD_OPT
