Update generated config to use bundler
Signed-off-by: Ed Robinson <edward-robinson@cookpad.com>

--- a/docker-image/v0.12/debian-cloudwatch/Dockerfile
+++ b/docker-image/v0.12/debian-cloudwatch/Dockerfile
@@ -8,21 +8,16 @@ USER root
 WORKDIR /home/fluent
 ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
 
-RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
+COPY Gemfile* /fluentd/
+  RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
      && apt-get update \
      && apt-get upgrade -y \
      && apt-get install \
      -y --no-install-recommends \
      $buildDeps \
-    && echo 'gem: --no-document' >> /etc/gemrc \
-    && gem install fluent-plugin-secure-forward \
-    && gem install fluent-plugin-record-reformer \
-    && gem install fluent-plugin-detect-exceptions -v 0.0.9 \
-    && gem install aws-sdk-core -v 2.10.50 \
-    && gem install fluent-plugin-cloudwatch-logs -v 0.4.0 \
-    && gem install fluent-plugin-kubernetes_metadata_filter \
-    && gem install ffi \
-    && gem install fluent-plugin-systemd -v 0.0.8 \
+     ruby-bundler \
+    && bundle config silence_root_warning true \
+    && bundle install --gemfile=/fluentd/Gemfile --path=/fluentd/vendor/bundle \
     && SUDO_FORCE_REMOVE=yes \
     apt-get purge -y --auto-remove \
                   -o APT::AutoRemove::RecommendsImportant=false \
