--- a/docker-image/v0.12/debian-cloudwatch/conf/fluent.conf
+++ b/docker-image/v0.12/debian-cloudwatch/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
   type cloudwatch_logs
@@ -11,4 +12,3 @@
   auto_create_stream true
   use_tag_as_stream true
 </match>
-
