--- a/docker-image/v0.12/debian-gcs/conf/fluent.conf
+++ b/docker-image/v0.12/debian-gcs/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
   # docs: https://github.com/daichirata/fluent-plugin-gcs
@@ -18,4 +19,3 @@
   time_slice_wait 10m
   utc
 </match>
-
