--- a/docker-image/v0.12/debian-graylog/conf/fluent.conf
+++ b/docker-image/v0.12/debian-graylog/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
    type gelf
@@ -17,4 +18,3 @@
    max_retry_wait 30
    disable_retry_limit
    num_threads 8
-
