--- a/docker-image/v0.12/debian-kafka/conf/fluent.conf
+++ b/docker-image/v0.12/debian-kafka/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
   type kafka_buffered
@@ -28,5 +29,4 @@
   max_send_limit_bytes "#{ENV['FLUENT_KAFKA_MAX_SEND_LIMIT_BYTES'] || nil}"
   discard_kafka_delivery_failed "#{ENV['FLUENT_KAFKA_DISCARD_KAFKA_DELIVERY_FAILED'] || false}"
 </match>
-  
 
