--- a/docker-image/v0.12/debian-logentries/conf/fluent.conf
+++ b/docker-image/v0.12/debian-logentries/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
    type logentries
@@ -12,4 +13,3 @@
    tag_error_log stderr
    config_path /etc/logentries/tokens.yaml
 </match>
-
