--- a/docker-image/v0.12/debian-papertrail/conf/fluent.conf
+++ b/docker-image/v0.12/debian-papertrail/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 
 ## Capture audit logs
@@ -21,4 +22,3 @@
   papertrail_port "#{ENV['FLUENT_PAPERTRAIL_PORT']}"
 
 </match>
-
