--- a/docker-image/v0.12/debian-s3/conf/fluent.conf
+++ b/docker-image/v0.12/debian-s3/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
   # docs: https://docs.fluentd.org/v0.12/articles/out_s3
@@ -21,4 +22,3 @@
   buffer_chunk_limit 256m
   buffer_path /var/log/fluentd-buffers/s3.buffer
 </match>
-
