--- a/docker-image/v0.12/debian-stackdriver/conf/fluent.conf
+++ b/docker-image/v0.12/debian-stackdriver/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
   type google_cloud
@@ -29,4 +30,3 @@
   # Use multiple threads for processing.
   num_threads 2
 </match>
-
