--- a/docker-image/v0.12/debian-elasticsearch/conf/fluent.conf
+++ b/docker-image/v0.12/debian-elasticsearch/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
    type elasticsearch
@@ -25,4 +26,3 @@
    disable_retry_limit
    num_threads 8
 </match>
-
