--- a/docker-image/v0.12/debian-loggly/conf/fluent.conf
+++ b/docker-image/v0.12/debian-loggly/conf/fluent.conf
@@ -4,10 +4,10 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
    type loggly
    log_level info
    loggly_url "https://logs-01.loggly.com/inputs/#{ENV['LOGGLY_TOKEN']}/tag/#{ENV['LOGGLY_TAGS'] || 'fluentd'}"
 </match>
-
