--- a/docker-image/v0.12/debian-syslog/conf/fluent.conf
+++ b/docker-image/v0.12/debian-syslog/conf/fluent.conf
@@ -4,6 +4,7 @@
 
 @include systemd.conf
 @include kubernetes.conf
+@include prometheus.conf
 
 <match **>
   @type kubernetes_remote_syslog
@@ -15,4 +16,3 @@
   packet_size 65535
   output_data_type ltsv
 </match>
-
