--- a/docker-image/v0.12/alpine-stackdriver/Dockerfile
+++ b/docker-image/v0.12/alpine-stackdriver/Dockerfile
@@ -16,6 +16,7 @@ RUN set -ex \
     && echo 'gem: --no-document' >> /etc/gemrc \
     && gem install fluent-plugin-secure-forward \
     && gem install fluent-plugin-record-reformer \
+    && gem install fluent-plugin-rewrite-tag-filter \
     && gem install fluent-plugin-detect-exceptions -v 0.0.9 \
     && gem install fluent-plugin-google-cloud \
     && gem install fluent-plugin-kubernetes_metadata_filter \
