moved the fluent-plugin-rewrite-tag-filter into the gemfile
Signed-off-by: Blake Jackson <blaketastic2@gmail.com>

--- a/docker-image/v0.12/debian-syslog/Gemfile
+++ b/docker-image/v0.12/debian-syslog/Gemfile
@@ -10,3 +10,4 @@ gem "fluent-plugin-kubernetes_remote_syslog", git: "https://github.com/georgegoh
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
+gem "fluent-plugin-rewrite-tag-filter"
