--- a/docker-image/v0.12/alpine-cloudwatch/Gemfile
+++ b/docker-image/v0.12/alpine-cloudwatch/Gemfile
@@ -9,3 +9,4 @@ gem "fluent-plugin-record-reformer"
 gem "aws-sdk-core", "2.10.50"
 gem "fluent-plugin-cloudwatch-logs", "0.4.0"
 gem "fluent-plugin-kubernetes_metadata_filter"
+gem "fluent-plugin-rewrite-tag-filter"
