--- a/docker-image/v0.12/alpine-graylog/Gemfile
+++ b/docker-image/v0.12/alpine-graylog/Gemfile
@@ -9,3 +9,4 @@ gem "fluent-plugin-record-reformer"
 gem "gelf", git: "https://github.com/graylog-labs/gelf-rb.git"
 gem "fluent-plugin-gelf-hs"
 gem "fluent-plugin-kubernetes_metadata_filter"
+gem "fluent-plugin-rewrite-tag-filter"
