--- a/docker-image/v0.12/alpine-s3/Gemfile
+++ b/docker-image/v0.12/alpine-s3/Gemfile
@@ -8,3 +8,4 @@ gem "fluent-plugin-secure-forward"
 gem "fluent-plugin-record-reformer"
 gem "fluent-plugin-s3", "~>0.8"
 gem "fluent-plugin-kubernetes_metadata_filter"
+gem "fluent-plugin-rewrite-tag-filter"
