--- a/docker-image/v0.12/debian-cloudwatch/Gemfile
+++ b/docker-image/v0.12/debian-cloudwatch/Gemfile
@@ -11,3 +11,4 @@ gem "fluent-plugin-cloudwatch-logs", "0.4.0"
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
+gem "fluent-plugin-rewrite-tag-filter"
