--- a/docker-image/v0.12/debian-graylog/Gemfile
+++ b/docker-image/v0.12/debian-graylog/Gemfile
@@ -11,3 +11,4 @@ gem "fluent-plugin-gelf-hs"
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
+gem "fluent-plugin-rewrite-tag-filter"
