--- a/docker-image/v0.12/debian-kafka/Gemfile
+++ b/docker-image/v0.12/debian-kafka/Gemfile
@@ -10,3 +10,4 @@ gem "fluent-plugin-kafka"
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
+gem "fluent-plugin-rewrite-tag-filter"
