--- a/docker-image/v0.12/debian-logentries/Gemfile
+++ b/docker-image/v0.12/debian-logentries/Gemfile
@@ -10,3 +10,4 @@ gem "fluent-plugin-record-reformer"
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
+gem "fluent-plugin-rewrite-tag-filter"
