--- a/docker-image/v0.12/debian-elasticsearch/Dockerfile
+++ b/docker-image/v0.12/debian-elasticsearch/Dockerfile
@@ -6,7 +6,11 @@ FROM fluent/fluentd:v0.12.33-debian
 MAINTAINER Eduardo Silva <eduardo@treasure-data.com>
 USER root
 WORKDIR /home/fluent
-ENV PATH /home/fluent/.gem/ruby/2.3.0/bin:$PATH
+ENV PATH /fluentd/vendor/bundle/ruby/2.3.0/bin:$PATH
+ENV GEM_PATH /fluentd/vendor/bundle/ruby/2.3.0
+ENV GEM_HOME /fluentd/vendor/bundle/ruby/2.3.0
+# skip runtime bundler installation
+ENV FLUENTD_DISABLE_BUNDLER_INJECTION 1
 
 COPY Gemfile* /fluentd/
   RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev" \
