Fix bundler related issue on Alpine. Fix #111
Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/docker-image/v0.12/alpine-syslog/Dockerfile
+++ b/docker-image/v0.12/alpine-syslog/Dockerfile
@@ -20,6 +20,7 @@ RUN set -ex \
         ruby-dev \
         libffi-dev \
         git \
+    && gem install bundler --version 1.16.1 \
     && bundle config silence_root_warning true \
     && bundle install --gemfile=/fluentd/Gemfile --path=/fluentd/vendor/bundle \
     && apk del .build-deps \
