Make logzio debian images
Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/docker-image/v1.1/debian-logzio/conf/kubernetes.conf
+++ b/docker-image/v1.1/debian-logzio/conf/kubernetes.conf
@@ -12,8 +12,10 @@
   pos_file /var/log/fluentd-containers.log.pos
   tag kubernetes.*
   read_from_head true
-  format json
-  time_format %Y-%m-%dT%H:%M:%S.%NZ
+  <parse>
+    @type json
+    time_format %Y-%m-%dT%H:%M:%S.%NZ
+  </parse>
 </source>
 
 <source>
@@ -22,8 +24,11 @@
   path /var/log/salt/minion
   pos_file /var/log/fluentd-salt.pos
   tag salt
-  format /^(?<time>[^ ]* [^ ,]*)[^\[]*\[[^\]]*\]\[(?<severity>[^ \]]*) *\] (?<message>.*)$/
-  time_format %Y-%m-%d %H:%M:%S
+  <parse>
+    @type regexp
+    expression /^(?<time>[^ ]* [^ ,]*)[^\[]*\[[^\]]*\]\[(?<severity>[^ \]]*) *\] (?<message>.*)$/
+    time_format %Y-%m-%d %H:%M:%S
+  </parse>
 </source>
 
 <source>
@@ -32,7 +37,9 @@
   path /var/log/startupscript.log
   pos_file /var/log/fluentd-startupscript.log.pos
   tag startupscript
-  format syslog
+  <parse>
+    @type syslog
+  </parse>
 </source>
 
 <source>
@@ -41,7 +48,10 @@
   path /var/log/docker.log
   pos_file /var/log/fluentd-docker.log.pos
   tag docker
-  format /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
+  <parse>
+    @type regexp
+    expression /^time="(?<time>[^)]*)" level=(?<severity>[^ ]*) msg="(?<message>[^"]*)"( err="(?<error>[^"]*)")?( statusCode=($<status_code>\d+))?/
+  </parse>
 </source>
 
 <source>
@@ -50,7 +60,9 @@
   path /var/log/etcd.log
   pos_file /var/log/fluentd-etcd.log.pos
   tag etcd
-  format none
+  <parse>
+    @type none
+  </parse>
 </source>
 
 <source>
@@ -60,7 +72,9 @@
   path /var/log/kubelet.log
   pos_file /var/log/fluentd-kubelet.log.pos
   tag kubelet
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -70,7 +84,9 @@
   path /var/log/kube-proxy.log
   pos_file /var/log/fluentd-kube-proxy.log.pos
   tag kube-proxy
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -80,7 +96,9 @@
   path /var/log/kube-apiserver.log
   pos_file /var/log/fluentd-kube-apiserver.log.pos
   tag kube-apiserver
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -90,7 +108,9 @@
   path /var/log/kube-controller-manager.log
   pos_file /var/log/fluentd-kube-controller-manager.log.pos
   tag kube-controller-manager
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -100,7 +120,9 @@
   path /var/log/kube-scheduler.log
   pos_file /var/log/fluentd-kube-scheduler.log.pos
   tag kube-scheduler
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -110,7 +132,9 @@
   path /var/log/rescheduler.log
   pos_file /var/log/fluentd-rescheduler.log.pos
   tag rescheduler
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -120,7 +144,9 @@
   path /var/log/glbc.log
   pos_file /var/log/fluentd-glbc.log.pos
   tag glbc
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 <source>
@@ -130,7 +156,9 @@
   path /var/log/cluster-autoscaler.log
   pos_file /var/log/fluentd-cluster-autoscaler.log.pos
   tag cluster-autoscaler
-  format kubernetes
+  <parse>
+    @type kubernetes
+  </parse>
 </source>
 
 # Example:
@@ -143,16 +171,18 @@
   path /var/log/kubernetes/kube-apiserver-audit.log
   pos_file /var/log/kube-apiserver-audit.log.pos
   tag kube-apiserver-audit
-  format multiline
-  format_firstline /^\S+\s+AUDIT:/
-  # Fields must be explicitly captured by name to be parsed into the record.
-  # Fields may not always be present, and order may change, so this just looks
-  # for a list of key="\"quoted\" value" pairs separated by spaces.
-  # Unknown fields are ignored.
-  # Note: We can't separate query/response lines as format1/format2 because
-  #       they don't always come one after the other for a given query.
-  format1 /^(?<time>\S+) AUDIT:(?: (?:id="(?<id>(?:[^"\\]|\\.)*)"|ip="(?<ip>(?:[^"\\]|\\.)*)"|method="(?<method>(?:[^"\\]|\\.)*)"|user="(?<user>(?:[^"\\]|\\.)*)"|groups="(?<groups>(?:[^"\\]|\\.)*)"|as="(?<as>(?:[^"\\]|\\.)*)"|asgroups="(?<asgroups>(?:[^"\\]|\\.)*)"|namespace="(?<namespace>(?:[^"\\]|\\.)*)"|uri="(?<uri>(?:[^"\\]|\\.)*)"|response="(?<response>(?:[^"\\]|\\.)*)"|\w+="(?:[^"\\]|\\.)*"))*/
-  time_format %FT%T.%L%Z
+  <parse>
+    @type multiline
+    format_firstline /^\S+\s+AUDIT:/
+    # Fields must be explicitly captured by name to be parsed into the record.
+    # Fields may not always be present, and order may change, so this just looks
+    # for a list of key="\"quoted\" value" pairs separated by spaces.
+    # Unknown fields are ignored.
+    # Note: We can't separate query/response lines as format1/format2 because
+    #       they don't always come one after the other for a given query.
+    format1 /^(?<time>\S+) AUDIT:(?: (?:id="(?<id>(?:[^"\\]|\\.)*)"|ip="(?<ip>(?:[^"\\]|\\.)*)"|method="(?<method>(?:[^"\\]|\\.)*)"|user="(?<user>(?:[^"\\]|\\.)*)"|groups="(?<groups>(?:[^"\\]|\\.)*)"|as="(?<as>(?:[^"\\]|\\.)*)"|asgroups="(?<asgroups>(?:[^"\\]|\\.)*)"|namespace="(?<namespace>(?:[^"\\]|\\.)*)"|uri="(?<uri>(?:[^"\\]|\\.)*)"|response="(?<response>(?:[^"\\]|\\.)*)"|\w+="(?:[^"\\]|\\.)*"))*/
+    time_format %Y-%m-%dT%T.%L%Z
+  </parse>
 </source>
 
 <filter kubernetes.**>
