Pull kubernetes_remote_syslog from standard rubygems repo instead of github. Fix #135
Signed-off-by: Jake Sperlazza <wjsperlazza@outlook.com>

--- a/docker-image/v0.12/debian-syslog/Gemfile
+++ b/docker-image/v0.12/debian-syslog/Gemfile
@@ -7,7 +7,7 @@ gem "fluentd", "0.12.33"
 gem "oj", "3.5.1"
 gem "fluent-plugin-secure-forward"
 gem "fluent-plugin-record-reformer"
-gem "fluent-plugin-kubernetes_remote_syslog", git: "https://github.com/georgegoh/fluent-plugin-kubernetes_remote_syslog.git"
+gem "fluent-plugin-kubernetes_remote_syslog"
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
