--- a/docker-image/v1.1/debian-syslog/Gemfile
+++ b/docker-image/v1.1/debian-syslog/Gemfile
@@ -5,7 +5,7 @@ source "https://rubygems.org"
 
 gem "fluentd", "1.1.3"
 gem "oj", "3.5.1"
-gem "fluent-plugin-kubernetes_remote_syslog", git: "https://github.com/georgegoh/fluent-plugin-kubernetes_remote_syslog.git"
+gem "fluent-plugin-kubernetes_remote_syslog"
 gem "fluent-plugin-kubernetes_metadata_filter"
 gem "ffi"
 gem "fluent-plugin-systemd"
