--- a/docker-image/v0.12/debian-kafka/Dockerfile
+++ b/docker-image/v0.12/debian-kafka/Dockerfile
@@ -20,6 +20,7 @@ COPY Gemfile* /fluentd/
      -y --no-install-recommends \
      $buildDeps \
      ruby-bundler \
+    && gem install bundler --version 1.16.1 \
     && bundle config silence_root_warning true \
     && bundle install --gemfile=/fluentd/Gemfile --path=/fluentd/vendor/bundle \
     && SUDO_FORCE_REMOVE=yes \
