Fix fluentd plugin version to avoid unexpected behaviour change
Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/docker-image/v1.2/debian-elasticsearch/conf/fluent.conf
+++ b/docker-image/v1.2/debian-elasticsearch/conf/fluent.conf
@@ -21,11 +21,11 @@
    logstash_format true
    type_name fluentd
    <buffer>
-     flush_thread_count 8
-     flush_interval 5s
-     chunk_limit_size 2M
-     queue_limit_length 32
-     retry_max_interval 30
+     flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '8'}"
+     flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '5s'}"
+     chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
+     queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
+     retry_max_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_RETRY_MAX_INTERVAL'] || '30'}"
      retry_forever true
    </buffer>
 </match>
