--- a/docker-image/v1.2/debian-s3/Gemfile
+++ b/docker-image/v1.2/debian-s3/Gemfile
@@ -5,9 +5,9 @@ source "https://rubygems.org"
 
 gem "fluentd", "1.2.6"
 gem "oj", "3.5.1"
-gem "fluent-plugin-rewrite-tag-filter"
+gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 gem "aws-sdk-s3", "~> 1.0"
-gem "fluent-plugin-s3", "~>1.0"
-gem "fluent-plugin-kubernetes_metadata_filter"
+gem "fluent-plugin-s3", "~> 1.1.6"
+gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.1.4"
 gem "ffi"
-gem "fluent-plugin-systemd"
+gem "fluent-plugin-systemd", "~> 1.0.1"
